--- a/detalle.html
+++ b/detalle.html
@@ -1,14 +1,18 @@
 <html>
 
 <head>
-  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <section id="digimons">
-    <h1>Aqui el nombre del digimon</h1>
+  <section>
+    <h1>DIGIMONS</h1>
+    <div id="digimons">
+    </div>
+    <script src="detalle.js"></script>
   </section>
-  <script src="detalle.js"></script>
+
+
+
 </body>
 
-</html>
+</html
